feat: implementa CRUD completo para entidade Aluno